Collection of changes since pyFormex release 0.4
================================================
- config.py:
  Configuration files now can have continuation lines, flagged by \

- image saving:
   - option settings gathered in a single dialog
   - auto mode saves a new image at each draw() operation
   - option to save full pyFormex window

- when starting multiple pyFormex instances, windows are named differently 

- user menus (see stl.py example)



- Formex class:
  - setProp has no longer a default value. If called with a value None,
    the property numbers are removed.
  - removeProp is deprecated: replace with setProp(None)

  - translate and translate1 have been merged into a single function


- draw.py:
  - draw(F) now also accepts a string. If it is the name of an object in
    globals(), that object is drawn.