@@ -16,4 +16,3 @@ e2 = Formex([[[r,0,0],[r,1,0]]]).rin(2,2*m,1).lam(3,n)
 e3 = Formex([[[r,0,0],[r,0,2]]],3).rinic(2,3,2*m+1,n,1,2)
 ee = (e1+e2+e3).bc(1,90/m,1)
 draw(ee)
-export,['e1','e2','e3','ee']
